<resources>
    <string name="app_name">Something</string>
    <string name="todo">ToDo</string>
    <string name="calendar">Calendar</string>
    <string name="drawer">Drawer</string>
    <string name="mark_at_the_top">Mark at the top</string>
    <string name="show_on_notification">Show on notification</string>
    <string name="edit">Edit</string>
    <string name="term">Term</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="finish">Finish</string>
    <string name="menu">Menu</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="verify_password">Verify Password</string>
    <string name="ok">OK</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="set_progress">Set Progress</string>
    <string name="set_complete">Set Complete</string>
    <string name="visible_in_todo">Visible In ToDo</string>
    <string name="visible_in_calendar">Visible In Calendar</string>
    <string name="run_on_unlock">Run on unlock.</string>
    <string name="setting">Setting</string>
    <string name="require_permission">Require Permission</string>
    <string name="request_permission">Request permission due to Google Policy</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="today">Today</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="sign_out">SignOut</string>
    <string name="show_finished_todo">Show Finished ToDo</string>
    <string name="data_on_the_device_will_be_deleted">Data on the device will be deleted.</string>
    <string name="data_on_the_server_will_be_deleted">Data on the server will be deleted.</string>
    <string name="connect_to_the_internet">Connect to the internet.</string>
    <string name="backup_success">Backup Success</string>
    <string name="restore_success">Restore Success</string>
    <string name="sign_out_success">SignOut Success</string>
    <string name="error">Error</string>
    <string name="google_error">Google Error</string>
    <string name="firebase_error">Firebase Error</string>
</resources>