<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/todoFragment"
        android:icon="@drawable/ic_todo_24"
        android:title="@string/todo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar_24"
        android:title="@string/calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/drawerFragment"
        android:icon="@drawable/ic_drawer_24"
        android:title="@string/drawer"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/finishedFragment"
        android:icon="@drawable/ic_verified_24"
        android:title="@string/finish"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_setting_24"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
</menu>