<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation.xml"
    app:startDestination="@id/todoFragment">

    <fragment
        android:id="@+id/todoFragment"
        android:name="com.taetae98.something.fragment.ToDoFragment"
        android:label="@string/todo"
        tools:layout="@layout/fragment_todo">
        <action
            android:id="@+id/action_todoFragment_to_toDoBottomMenuDialog"
            app:destination="@id/toDoBottomMenuDialog" />
    </fragment>
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.taetae98.something.fragment.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar">
    </fragment>
    <fragment
        android:id="@+id/drawerFragment"
        android:name="com.taetae98.something.fragment.DrawerFragment"
        android:label="@string/drawer"
        tools:layout="@layout/fragment_drawer"/>
    <fragment
        android:id="@+id/mainMoreFragment"
        android:name="com.taetae98.something.fragment.MainMoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_main_more"/>
    <dialog
        android:id="@+id/toDoBottomMenuDialog"
        android:name="com.taetae98.something.dialog.ToDoBottomMenuDialog"
        android:label="@string/menu"
        tools:layout="@layout/dialog_todo_bottom_menu">
        <argument
            android:name="todo"
            app:argType="com.taetae98.something.dto.ToDo" />
    </dialog>
</navigation>