<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.taetae98.something.viewmodel.PasswordViewModel" />

        <variable
            name="onCancel"
            type="OnClickListener" />

        <variable
            name="onVerify"
            type="OnClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/verify_password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                style="@style/Theme.Something.TextInputLayout.FilledBox"
                android:hint="@string/password"
                app:errorEnabled="@{viewModel.password.empty ? false : false }"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:focusableInTouchMode="true"
                    android:id="@+id/password_edit_text"
                    android:text="@={viewModel.password}"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:onClick="@{onCancel}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ok_button"
                app:layout_constraintStart_toStartOf="@id/password_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ok_button"
                android:onClick="@{onVerify}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/password_text_input_layout"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>