<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View.OnClickListener" />

        <variable
            name="onBackup"
            type="OnClickListener" />
        <variable
            name="onRestore"
            type="OnClickListener" />
        <variable
            name="onSignOut"
            type="OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:title="@string/backup"
            tools:navigationIcon="?attr/homeAsUpIndicator" />

        <LinearLayout
            android:dividerPadding="10dp"
            android:divider="@drawable/divider_grey_horizontal"
            android:showDividers="middle"
            android:orientation="vertical"
            android:background="?attr/colorOnPrimary"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.taetae98.something.view.SettingItemView
                    app:title="@string/backup"
                    android:onClick="@{onBackup}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <com.taetae98.something.view.SettingItemView
                    app:title="@string/restore"
                    android:onClick="@{onRestore}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.taetae98.something.view.SettingItemView
                app:title="@string/sign_out"
                android:onClick="@{onSignOut}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>