<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:title="@string/edit" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/option_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/toolbar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/mark_at_the_top_switch"
                            android:text="@string/mark_at_the_top"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/show_on_notification_switch"
                            android:text="@string/show_on_notification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintTop_toBottomOf="@id/mark_at_the_top_switch"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:text="@string/security"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintTop_toBottomOf="@id/show_on_notification_switch"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/term_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/option_card_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/term_switch"
                            android:text="@string/term"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/begin_title_text_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:padding="10dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/begin"
                            android:textAlignment="center"
                            app:layout_constraintEnd_toStartOf="@id/end_title_text_view"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/term_switch" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/end_title_text_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:padding="10dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/end"
                            android:textAlignment="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/begin_title_text_view"
                            app:layout_constraintTop_toBottomOf="@id/term_switch" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/begin_text_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:textAlignment="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/end_text_view"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/begin_title_text_view"
                            tools:text="2000 / 10 / 10" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/end_text_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:textAlignment="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/begin_text_view"
                            app:layout_constraintTop_toBottomOf="@id/end_title_text_view"
                            tools:text="2000 / 10 / 10" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/drawer_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/term_card_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/drawer_switch"
                            android:text="@string/drawer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:hint="@string/drawer"
                            app:boxBackgroundColor="@android:color/transparent"
                            app:boxBackgroundMode="filled"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/drawer_switch">
                            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:cursorVisible="false"
                                android:focusable="false" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/drawer_card_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/title_text_input_layout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:hint="@string/title"
                            app:boxBackgroundColor="@android:color/transparent"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">
                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:hint="@string/description"
                            app:boxBackgroundColor="@android:color/transparent"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_text_input_layout">
                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_anchor="@id/layout"
            app:layout_anchorGravity="end|bottom"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>