<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.taetae98.something.viewmodel.DrawerEditViewModel" />

        <variable
            name="onFinish"
            type="OnClickListener" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="?colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:title="@string/edit" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/option_card_view"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:id="@+id/drawer_switch"
                                android:text="@string/password"
                                android:checked="@={viewModel.hasPassword}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent" />

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                                android:alpha="@{viewModel.hasPassword ? 1.0F : 0.3F}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                app:endIconMode="password_toggle"
                                android:enabled="@{viewModel.hasPassword}"
                                app:boxBackgroundColor="@android:color/transparent"
                                app:boxBackgroundMode="filled"
                                app:boxStrokeWidth="0dp"
                                app:boxStrokeWidthFocused="0dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/drawer_switch">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:text="@={viewModel.password}"
                                    android:inputType="textPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </com.google.android.material.textfield.TextInputLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/option_card_view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name_text_input_layout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                            android:hint="@string/name"
                            android:layout_marginBottom="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="@{viewModel.name.empty ? false : false }"
                            app:boxBackgroundColor="@android:color/transparent"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp">
                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/Theme.Something.Drawer.Name"
                                android:text="@={viewModel.name}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/ic_finish_24"
            android:contentDescription="@string/finish"
            android:onClick="@{onFinish}"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/layout"
            app:layout_anchorGravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>